opam-version: "2.0"
synopsis: "Content-addressed Identifiers"
maintainer: ["patrick@sirref.org"]
authors: ["patrick@sirref.org"]
homepage: "https://github.com/patricoferris/ocaml-cid"
bug-reports: "https://github.com/patricoferris/ocaml-cid/issues"
depends: [
  "ocaml" {>= "4.02"}
  "dune" {>= "3.2"}
  "multibase"
  "multicodec"
  "multihash-digestif"
  "alcotest" {with-test}
  "lwt" {with-test & ocaml:version >= "4.10"}
  "irmin" {with-test & ocaml:version >= "4.10"}
  "irmin-test" {with-test & ocaml:version >= "4.10"}
  "mdx" {with-test & >= "2.2.1"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/patricoferris/ocaml-cid.git"
